tests/rascal/negative/type_errors/L1/14_expression_ES10_D4_31.ob
MODULE Test14;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := ((((x DIV 200) * (0 DIV 200)) - ((0 * 1) + (2 - 1223))) <= (((- 2) * (+ 2)) - ((0 DIV x) - (1223 - y))));
               q := (~ (((1223 DIV x) - (1 + z)) > ((x * z) + (2 - x))));
               z := ((((z DIV 1223) - (y * x)) + ((+ 1) + (0 * 0))) + (+ ((- 1) DIV (+ 200))));
  (* error *)  p := (((- (p * y)) - (+ (1 - 2))) = (+ (+ (- 1))));
               r := ((- ((200 DIV 1223) - (z - z))) <= (((0 - 1) + (z - z)) DIV ((+ x) DIV (z DIV 1))));
               r := ((+ (+ (1223 + 200))) >= (((200 - z) DIV (- y)) MOD (- (2 + 1223))));
               x := ((+ ((1 + 200) + (y - 1223))) - (((1223 MOD x) DIV (200 * 1)) * ((+ y) MOD (z MOD y))));
               q := ((((200 * x) MOD (- 2)) DIV ((+ z) DIV (y * z))) <= ((- (- 2)) + ((2 * y) MOD (x MOD 2))));
               r := ((((q & r) & (z > x)) & ((- y) <= (x MOD 1))) & (((x = 200) OR (200 # 1223)) & ((y MOD y) # (+ 1))));
               y := ((((z - 1223) * (- x)) MOD ((+ z) DIV (200 MOD z))) * (((1 + 1) + (0 * 1223)) MOD ((z * x) * (z * z))))
END Test14.